Use Cekit build for driver images